<resources>
    <string name="app_name">T3</string>
    <string name="bandeau">Menu</string>
    <string name="nom">Nom : </string>

    <string name="prenom">Prénom : </string>

    <string name="phone">Téléphone : </string>

    <string name="typePhone">Type de téléphone : </string>

    <string name="ajouter">Ajouter</string>

    <string name="radioPortable">Portable</string>

    <string name="radioMaison">Maison</string>

    <string name="radioEntreprise">Entreprise</string>
    <string name="date">Date de naissance : </string>

    <string name="weight">Poids (en g): </string>
    <string name="height">Taille (en cm): </string>
    <string name="typeSexe">Sexe bioglogique : </string>
    <string name="radioHomme">Homme</string>
    <string name="radioFemme">Femme</string>
    <string name="submit">Valider</string>


    <string name="itmImc">Calculatrice IMC (activité4 / TP2)</string>
    <string name="itmAnnuaire">Valider (Activité 3 / TP1)</string>
    <string name="itmEnregistrer">Enregistrer</string>
    <string name="itmSaluer">Saluer</string>
</resources>