<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".imc">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purplePastel"

        android:elevation="4dp" />
    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/bandeau"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:labelFor="@id/inputNom"
                android:text="@string/nom"
                android:textSize="20sp" />




            <EditText
                android:id="@+id/inputNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="text"
                android:text="" />




        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:labelFor="@id/inputPrenom"
                android:text="@string/prenom"
                android:textSize="20sp" />




            <EditText
                android:id="@+id/inputPrenom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="text"
                android:text="" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:labelFor="@id/inputDate"
                android:text="@string/date"
                android:textSize="20sp" />




            <EditText
                android:id="@+id/inputDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="datetime"
                android:ems="10"
                android:inputType="text"
                android:text="" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:labelFor="@id/inputWeight"
                android:text="@string/weight"
                android:textSize="20sp" />




            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:ems="10"
                android:text="" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:labelFor="@id/inputHeight"
                android:text="@string/height"
                android:textSize="20sp" />




            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:ems="10"
                android:text="" />


        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <TextView
            android:id="@+id/textTypePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/typeSexe"
            android:textSize="20sp" />




        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">




            <RadioButton
                android:id="@+id/radioPortable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/radioHomme"
                android:textSize="20sp" />


            <RadioButton
                android:id="@+id/radioMaison"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/radioFemme"
                android:textSize="20sp" />




        </RadioGroup>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/crimson"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/submit"
            app:cornerRadius="@null"
            app:iconPadding="0dp"
            android:textColor="@color/white"/>




    </LinearLayout>


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


    <TextView
        android:id="@+id/meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"/>


</LinearLayout>
