<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fullFrame"
        tools:context=".afficherMessage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>




        <LinearLayout
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:labelFor="@id/inputNom"
                    android:fontFamily="@font/bahnschrift"/>


                <EditText
                    android:id="@+id/inputNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="name"
                    android:ems="10"
                    android:inputType="text"
                    android:text="" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prenom"
                    android:labelFor="@id/inputPrenom"
                    android:fontFamily="@font/bahnschrift"/>


                <EditText
                    android:id="@+id/inputPrenom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text=""
                    android:autofillHints="name" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:labelFor="@id/inputPhone"
                    android:fontFamily="@font/bahnschrift"/>


                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:text=""
                    android:autofillHints="phone" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textTypePhone"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/typePhone" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/radioPortable"
                android:orientation="horizontal"
                tools:ignore="UselessParent">


                <RadioButton
                    android:id="@+id/radioPortable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bahnschrift"
                    android:text="@string/radioPortable" />

                <RadioButton
                    android:id="@+id/radioMaison"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bahnschrift"
                    android:text="@string/radioMaison" />

                <RadioButton
                    android:id="@+id/radioEntreprise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bahnschrift"
                    android:text="@string/radioEntreprise" />


            </RadioGroup>


        </LinearLayout>




        <LinearLayout
            android:id="@+id/validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/button"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/crimson"
                android:fontFamily="@font/bahnschrift"
                android:text="@string/ajouter"
                app:cornerRadius="@null"
                app:iconPadding="0dp" />


        </LinearLayout>




    </LinearLayout>

